<resources>
    <string name="app_name">Hygge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="offer_title">We Offer the Best Products for your Skin</string>
    <string name="see_store">Hangi Mağaza\'da Var?</string>
    <string name="add_to_cart">Sepete Ekle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt">Firebase Message : %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_message">Please try again</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="buy">Buy</string>
    <string name="product_explanation">Ürün Açıklaması</string>
    <string name="medium">M</string>
    <string name="small">S</string>
    <string name="large">L</string>
</resources>