<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="productItem"
            type="mobi.appcent.apptern.data.model.remote.response.ProductItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProductImage"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/product_detail_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImageView="@{productItem.productImage}"
            tools:src="@drawable/ic_fake_data" />

        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{productItem.currentStore.storeName}"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProductImage"
            tools:text="Beymen Collection" />

        <TextView
            android:id="@+id/tvOldPrice"
            android:background="@drawable/strikethrough"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/gray"
            android:text="@{productItem.oldPrice.toString()}"
            app:layout_constraintBottom_toBottomOf="@id/tvNewPrice"
            app:layout_constraintEnd_toStartOf="@id/tvNewPrice"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName"
            tools:text="$80" />

        <TextView
            android:id="@+id/tvNewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{productItem.newPrice.toString()}"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvOldPrice"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName"
            tools:text="$50" />

<!--        <TextView-->
<!--            android:id="@+id/tvProductExpLabel"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:text="@string/product_explanation"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
<!--            android:textColor="@color/gray"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tvNewPrice"-->
<!--            tools:viewBindingIgnore="true" />-->

<!--        <TextView-->
<!--            app:layout_constraintTop_toBottomOf="@id/tvProductExpLabel"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->

<!--            android:layout_marginTop="8dp"-->
<!--            android:id="@+id/tvProductExp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->

        <include
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/horizontal_counter"
            layout="@layout/horizontal_counter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOldPrice" />

        <LinearLayout
            android:id="@+id/llSizeChoice"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/horizontal_counter"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSmallChoice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:padding="16dp"
                android:textAlignment="center"
                android:background="@drawable/product_detail_background"
                android:text="@string/small"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvMediumChoice"
                android:padding="16dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/product_detail_background"
                android:text="@string/medium"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvLargeChoice"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:background="@drawable/product_detail_background"
                android:text="@string/large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvWhichStore"
            android:text="@string/see_store"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/product_detail_background"
            android:layout_width="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/llSizeChoice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />


        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/add_to_cart"
            android:background="@drawable/add_cart"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:paddingVertical="4dp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>